# Spout2

./: CMakeLists.txt  LICENSE  README.md  SpoutCommon.h  SpoutDirectX.h  SpoutGLDXinterop.cpp  SpoutGLDXinterop.h  SpoutGLextensions.h  SpoutReceiver.cpp  SpoutSDK.cpp  SpoutSender.cpp  SpoutSenderNames.h  SpoutSharedMemory.cpp  SpoutSharedMemory.h  UPDATES.md  readme.txt  spout2-config.cmake  spout2-config.cmake.in  updates.txt
DEMO/: readme.md  (+1 more)
SPOUT-SDK/: CMakeLists.txt  licence.txt
SPOUT-SDK/Examples/Cinder/source/: CinderSpoutSender.cpp
SPOUT-SDK/Examples/ofSpoutExample/: ofSpoutExample.vcxproj.filters  readme.txt
SPOUT-SDK/SpoutDirectX/: readme.md
SPOUT-SDK/SpoutDirectX/SpoutDX/: SpoutDX.cpp  SpoutDX.h
SPOUT-SDK/SpoutDirectX/SpoutDX/Tutorial04/: Tutorial04.cpp  Tutorial04_2017.vcxproj
SPOUT-SDK/SpoutDirectX/SpoutDX/Tutorial07/: CMakeLists.txt  Tutorial07.rc  Tutorial07_VS.hlsl
SPOUT-SDK/SpoutLibrary/Binaries/Win32/: SpoutLibrary.h
SPOUT-SDK/SpoutLibrary/VS2017/: SpoutLibrary.sln
SPOUT-SDK/SpoutSDK/: SpoutCommon.h  SpoutCopy.cpp  SpoutCopy.h  SpoutDirectX.cpp  SpoutDirectX.h  SpoutGLDXinterop.cpp  SpoutGLDXinterop.h  SpoutMemoryShare.h  SpoutReceiver.cpp  SpoutReceiver.h  SpoutSDK.cpp  SpoutSDK.h  SpoutSender.h  SpoutSenderNames.h
SPOUTSDK/SpoutDirectX/SpoutDX/: CMakeLists.txt  Examples.sln  SpoutDX.cpp  SpoutDX.h
SPOUTSDK/SpoutDirectX/SpoutDX/SpoutDX12/: CMakeLists.txt  SpoutDX12.cpp  SpoutDX12.h  readme.md
SPOUTSDK/SpoutDirectX/SpoutDX/SpoutDX9/: CMakeLists.txt  SpoutDX9.cpp  SpoutDX9.h  readme.md
SPOUTSDK/SpoutDirectX/SpoutDX/Tutorial04/: CMakeLists.txt  CMakeVS2022.bat  Resource.h  Tutorial04.cpp  Tutorial04.rc  Tutorial04.txt  Tutorial04_2017.sln  Tutorial04_2017.vcxproj  Tutorial04_2017.vcxproj.filters  Tutorial04_2022.sln  Tutorial04_2022.vcxproj  Tutorial07.cpp  Tutorial07.rc
SPOUTSDK/SpoutDirectX/SpoutDX/Tutorial04_Lib/: SpoutUtils.rc  Tutorial04.cpp  Tutorial04.rc  Tutorial04_Lib.sln  Tutorial04_Lib.vcxproj  Tutorial04_Lib.vcxproj.filters  readme.md
SPOUTSDK/SpoutDirectX/SpoutDX/Tutorial07/: CMakeLists.txt  DDSTextureLoader.cpp  Resource.h  Tutorial07.cpp  Tutorial07.rc  Tutorial07_2017.sln  Tutorial07_2017.vcxproj  Tutorial07_2017.vcxproj.filters  Tutorial07_2022.sln  Tutorial07_2022.vcxproj  Tutorial07_2022.vcxproj.filters
SPOUTSDK/SpoutGL/: CMakeLists.txt  Spout.cpp  Spout.h  SpoutCommon.h  SpoutControls.cpp  SpoutCopy.cpp  SpoutCopy.h  SpoutDirectX.cpp  SpoutDirectX.h  SpoutFrameCount.cpp  SpoutFrameCount.h  SpoutGL.cpp  SpoutGL.h  SpoutGLextensions.cpp  SpoutGLextensions.h  SpoutMemoryShare.cpp  SpoutMemoryShare.h  SpoutReceiver.cpp  SpoutReceiver.h  SpoutSDK.cpp  SpoutSDK.h  SpoutSender.cpp  SpoutSender.h  SpoutSenderNames.cpp  SpoutSenderNames.h  SpoutShaders.cpp  SpoutShaders.h  SpoutSharedMemory.cpp  SpoutSharedMemory.h  SpoutUtils.cpp  SpoutUtils.h  readme.md
SPOUTSDK/SpoutGL/Binaries/Win32/: SpoutSDK.lib
SPOUTSDK/SpoutGL/Binaries/x64/: SpoutSDK.lib
SPOUTSDK/SpoutGL/Docs/: 1) New-in-2.007.txt  2) Porting.txt  3) Sender-list.txt
SPOUTSDK/SpoutGL/Documentation/: index.html
SPOUTSDK/SpoutGL/Documentation/files/: SpoutGL-cpp-Summary.js  SpoutGL-cpp-SummaryToolTips.js  SpoutGL-cpp.html  SpoutSDK-cpp-Summary.js  SpoutSDK-cpp-SummaryToolTips.js  SpoutSDK-cpp.html
SPOUTSDK/SpoutGL/Documentation/menu/: classes.js  files.js  tabs.js
SPOUTSDK/SpoutGL/Documentation/other/: home.html
SPOUTSDK/SpoutGL/Documentation/search/: index.js
SPOUTSDK/SpoutGL/Documentation/styles/: main.css
SPOUTSDK/SpoutGL/Documentation/text/: Sender-list.txt
SPOUTSDK/SpoutGL/VS2017/: SpoutSDK.vcxproj
SPOUTSDK/SpoutGL/VS2022/: SpoutSDK.sln  SpoutSDK.vcxproj
SPOUTSDK/SpoutLibrary/: CMakeLists.txt  SpoutLibrary.cpp  SpoutLibrary.h  SpoutLibrary_VS2022.sln  SpoutLibrary_VS2022.vcxproj  SpoutLibrary_VS2022.vcxproj.filters  licence.txt  readme.md  readme.txt
SPOUTSDK/SpoutLibrary/Binaries/: SpoutLibrary.lib
SPOUTSDK/SpoutLibrary/Binaries/Win32/: SpoutLibrary.h  SpoutLibrary.lib
SPOUTSDK/SpoutLibrary/Binaries/x64/: SpoutLibrary.h  SpoutLibrary.lib
SPOUTSDK/SpoutLibrary/Distribution/Include/: SpoutLibrary.h
SPOUTSDK/SpoutLibrary/Documentation/: index.html
SPOUTSDK/SpoutLibrary/Documentation/files/: SpoutLibrary-cpp-Summary.js  SpoutLibrary-cpp-SummaryToolTips.js  SpoutLibrary-cpp.html
SPOUTSDK/SpoutLibrary/Documentation/menu/: files.js  tabs.js
SPOUTSDK/SpoutLibrary/Documentation/other/: home.html
SPOUTSDK/SpoutLibrary/Documentation/search/: index.js
SPOUTSDK/SpoutLibrary/Documentation/styles/: main.js
SPOUTSDK/SpoutLibrary/Source/: CMakeLists.txt  SpoutFunctions.cpp  SpoutFunctions.h  SpoutLibrary.cpp  SpoutLibrary.h
SPOUTSDK/SpoutLibrary/SpoutLibraryExample/: CopySource.bat  README_FIRST.TXT  SpoutLibraryExample.sln  SpoutLibraryExample.vcxproj  SpoutLibraryExample.vcxproj.filters  ofSpoutLibrary.sln  ofSpoutLibrary.vcxproj  readme.md  readme.txt
SPOUTSDK/SpoutLibrary/VS2012/: SpoutLibrary.vcxproj  SpoutLibrary.vcxproj.filters
SPOUTSDK/SpoutLibrary/VS2015/: SpoutLibrary.vcxproj  SpoutLibrary.vcxproj.filters
SPOUTSDK/SpoutLibrary/VS2017/: SpoutLibrary.sln  SpoutLibrary.vcxproj  SpoutLibrary.vcxproj.filters
SPOUTSDK/SpoutLibrary/VS2022/: SpoutLibrary.sln  SpoutLibrary.vcxproj  SpoutLibrary.vcxproj.filters
SPOUTSDK/SpoutLibrary/ofSpoutLibraryExample/: ofSpoutLibaryExample.vcxproj  ofSpoutLibaryExample.vcxproj.filters  ofSpoutLibraryExample.sln
SPOUTSDK/SpoutSDK/: CMakeLists.txt  Spout.h  SpoutCommon.h  SpoutControls.cpp  SpoutControls.h  SpoutCopy.cpp  SpoutCopy.h  SpoutDirectX.cpp  SpoutDirectX.h  SpoutFrameCount.cpp  SpoutFrameCount.h  SpoutGLDXinterop.cpp  SpoutGLDXinterop.h  SpoutGLextensions.cpp  SpoutGLextensions.h  SpoutMemoryShare.cpp  SpoutMemoryShare.h  SpoutReceiver.cpp  SpoutReceiver.h  SpoutSDK.cpp  SpoutSDK.h  SpoutSender.cpp  SpoutSender.h  SpoutSenderNames.cpp  SpoutSenderNames.h  SpoutSharedMemory.cpp  SpoutSharedMemory.h  SpoutUtils.cpp  SpoutUtils.h  readme.txt
SPOUTSDK/SpoutSDK/VS2012/: SpoutSDK.vcxproj
SPOUTSDK/SpoutSDK/VS2015/: SpoutSDK.vcxproj
SPOUTSDK/SpoutSDK/VS2017/: SpoutSDK.vcxproj
(+853 files in other folders)
